--- a/biome.json
+++ b/biome.json
@@ -16,11 +16,11 @@
       "**/*.md",
       "**/*.css",
       "**/*.html",
-      "!node_modules/**",
-      "!.next/**",
-      "!dist/**",
-      "!build/**",
-      "!.docusaurus/**"
+      "!node_modules",
+      "!.next",
+      "!dist",
+      "!build",
+      "!.docusaurus"
     ]
   },
   "formatter": {
