--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@docusaurus/tsconfig": "3.9.2",
     "@docusaurus/types": "3.9.2",
     "@tailwindcss/postcss": "^4.1.17",
+    "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.17",
     "markdownlint-cli": "^0.46.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
